# SwoftLang

./: README.md  build.gradle.kts  cleanup.ps1  gradle.properties  settings.gradle.kts
java/: build.gradle.kts
java/src/main/java/net/swofty/: ASTExecutor.java  Bootstrap.java  LibraryLoader.java  ScriptLoader.java  SwoftLangEngine.java
java/src/main/java/net/swofty/ast/: ASTNode.java  ASTVisitor.java  SwoftInterpreter.java
java/src/main/java/net/swofty/ast/nodes/: CommandStatement.java  Expression.java  Program.java  Statement.java
java/src/main/java/net/swofty/command/: ASTExecutor.java  ExecutionContext.java  MinestomCommandRegistrar.java  MinestomSenderAdapter.java  SwoftLangExecutor.java
java/src/main/java/net/swofty/command/executors/: AbstractCommandExecutor.java  CommandExecutor.java  SendCommandExecutor.java  TeleportCommandExecutor.java
java/src/main/java/net/swofty/event/: AbstractSwoftEvent.java  EventRegistrar.java  EventType.java
java/src/main/java/net/swofty/event/events/: GenericSwoftEvent.java  SwoftPlayerChatEvent.java  SwoftPlayerJoinEvent.java
java/src/main/java/net/swofty/execution/: ASTNode.java  BlockStatement.java  Expression.java  Statement.java
java/src/main/java/net/swofty/execution/commands/: HaltCommand.java  IfStatement.java  SendCommand.java  TeleportCommand.java  VariableAssignment.java
java/src/main/java/net/swofty/execution/expressions/: TypeLiteral.java  (+3 more)
java/src/main/java/net/swofty/lexer/: SwoftLexer.java  Token.java  TokenType.java
java/src/main/java/net/swofty/mapper/: PropertyMapper.java  PropertyMapperInitializer.java  PropertyMapperProvider.java  PropertyMapperRegistry.java
java/src/main/java/net/swofty/nativebridge/: NativeBridge.java  NativeParser.java
java/src/main/java/net/swofty/parser/: SwoftParser.java
java/src/main/java/net/swofty/processors/: CommandProcessor.java  EventProcessor.java
native/: CMakeLists.txt
native/include/: net_swofty_nativebridge_NativeParser.h
native/src/: SwoftLangParser.cpp  SwoftLangParser.h
native/src/ast/: ASTNode.h  ExecuteBlock.h  ExecutionContext.h  Expression.h  Statement.h
native/src/ast/expressions/: BinaryExpression.h  EventAccessExpression.h  StringLiteral.h  TypeLiteral.h  VariableReference.h
native/src/ast/statements/: BlockStatement.h  CancelEventStatement.h  HaltCommand.h  IfStatement.h  SendCommand.h  TeleportCommand.h  VariableAssignment.h
native/src/jni/: SwoftLangJNIBridge.cpp  SwoftLangJNIBridge.h
native/src/jni/implementations/: net_swofty_nativebridge_NativeBridge.cpp  net_swofty_nativebridge_NativeParser.cpp
native/src/parser/: CodeBlock.h  Lexer.cpp  Lexer.h  ScriptParser.cpp  ScriptParser.h  TypeParser.cpp  TypeParser.h  Variable.h  VariableParser.cpp  VariableParser.h
native/src/parser/block/: ExecuteBlockParser.cpp  ExecuteBlockParser.h
native/src/parser/command/: Command.h  CommandParser.cpp  CommandParser.h  ExecuteBlockParser.cpp  ExecuteBlockParser.h
native/src/parser/event/: Event.h  EventParser.cpp  EventParser.h
native/src/types/: DataType.cpp  DataType.h  Token.h  TokenType.h
scripts/: command.sw  event.sw
(+33 files in other folders)
